platform/onp/harbor/harbor-components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-core
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-core
  template:
    metadata:
      labels:
        app: harbor-core
    spec:
      containers:
        - name: harbor-core
          image: goharbor/harbor-core:v2.10.0
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: harbor-data
              mountPath: /storage
            # ✨ [추가] ConfigMap 마운트
            - name: config
              mountPath: /etc/harbor/core/app.conf
              subPath: app.conf
      volumes:
        - name: harbor-data
          persistentVolumeClaim:
            claimName: harbor-data-pvc
        # ✨ [추가] harbor-core-config 볼륨 정의
        - name: config
          configMap:
            name: harbor-core-config
