platform/onp/harbor/harbor-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-proxy
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-proxy
  template:
    metadata:
      labels:
        app: harbor-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: harbor-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: harbor-proxy-nodeport
  namespace: devops
spec:
  type: NodePort
  selector:
    app: harbor-proxy
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31432
