platform/onp/harbor/portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-portal
  namespace: devops
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: harbor-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-portal
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-portal
  template:
    metadata:
      labels:
        app: harbor-portal
    spec:
      nodeSelector:
        kubernetes.io/hostname: cntlp-onp-wk-01
      containers:
        - name: harbor-portal
          image: goharbor/harbor-portal:v2.10.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: var-run
              mountPath: /var/run
            - name: var-cache
              mountPath: /var/cache/nginx
            # 👇 Nginx 설정 마운트 추가
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: var-run
          emptyDir: {}
        - name: var-cache
          emptyDir: {}
        # 👇 ConfigMap 볼륨 추가
        - name: config
          configMap:
            name: harbor-portal-config
