platform/onp/harbor/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      nodeSelector:
        kubernetes.io/hostname: cntlp-onp-wk-01  # 온프레미스 노드로 고정
      containers:
        - name: postgresql
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: devops
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
