platform/onp/harbor/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-registry
  namespace: devops
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: harbor-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbor-registry
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-registry
  template:
    metadata:
      labels:
        app: harbor-registry
    spec:
      nodeSelector:
        kubernetes.io/hostname: cntlp-onp-wk-01
      containers:
        - name: registry
          image: goharbor/registry-photon:v2.10.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/registry/config.yml
              name: registry-config
              subPath: config.yml
            - mountPath: /storage
              name: harbor-data
              subPath: registry
            # 👇 subPath를 root.crt 로 변경
            - mountPath: /etc/registry/root.crt
              name: token-service-cert
              subPath: root.crt
      volumes:
        - name: registry-config
          secret:
            secretName: harbor-registry-config
        - name: harbor-data
          persistentVolumeClaim:
            claimName: harbor-data-pvc
        - name: token-service-cert
          secret:
            secretName: harbor-token-service
